--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <h2>Maggie Yang</h2>
+    <h1>Kerokerokeroppi deserves better.</h1>
+    <p>About the Injustices in the World: An Analysis by Maggie Yang</p>
+    <h2>In my opinion, Keroppi deserves to be AT LEAST in the Top 10 of the <a href="https://www.sanrio.co.jp/special/characterranking/2023/en/result/">2023 Sanrio Character Ranking</a>.
+        .</h2>
+    <p>There is not enough Keroppi merch in this world. You would normally think that such a NICE, CUTE FROG would make it into the top 10 of the fan voted popularity polls. But, the monstrosity that is Hangyodon has taken up a precious space in 7th place. I see this as an injustice to say the least. Because of this UNREASONABLE decision by 1.8 million people, I am forced to brand myself as a Pompompurin lover. No hate to Pompompurin, but he's only a placeholder for the one true #1 in my heart...Kerokerokeroppi.</p>
     <ul>
-        <h4>Numbers</h4>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <p>HELLO ???</p>
+        <h4>Reasons why Keroppi deserves Top 10</h4>
+        <li>Frog</li>
+        <li>Cute</li>
+        <li>Green</li>
+        <li>Super cute</li>
+        <li>Better than Hangyodon</li>
+        <li>Underrated</li>
     </ul>
     <ol>
-        <li>oisejgs</li>
-        <li>oisejgs</li>
-        <li>oisejgs</li>
-        <li>oisejgs</li>
-        <li>oisejgs</li>
-        <li>oisejgs</li>
+        <h4>Top 6 Sanrio By Me</h4>
+        <li>Keroppi</li>
+        <li>Pompompurin</li>
+        <li>Gudetama</li>
+        <li>Cinnamoroll</li>
+        <li>Kuromi</li>
+        <li>My Melody</li>
+        <li>NOT HANGYODON.</li>
     </ol>
-        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.justonecookbook.com%2Fcustard-pudding%2F&psig=AOvVaw2Be7kaOkDEuuN_rIJJNbOx&ust=1694528425135000&source=images&cd=vfe&opi=89978449&ved=0CA0QjRxqFwoTCMCTmpXgooEDFQAAAAAdAAAAABAD">pudding</a>.
+    <img src="https://64.media.tumblr.com/386e54375a478acf2686ed71a8fdbb05/44a27116c12812ea-69/s1280x1920/37e32ef6f8a970db8fab6384ab45f76dc6375e65.jpg" alt="">
 </body>
 </html>
