--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>About the Injustices in the World: An Analysis by Maggie Yang</p>
     <h2>In my opinion, Keroppi deserves to be AT LEAST in the Top 10 of the <a href="https://www.sanrio.co.jp/special/characterranking/2023/en/result/">2023 Sanrio Character Ranking</a>.
         .</h2>
-    <p>My name is Maggie Yang. I am not living the best life out there because there is not enough Keroppi merch in this world. You would normally think that such a NICE, CUTE FROG would make it into the top 10 of the fan voted popularity polls. But, the monstrosity that is Hangyodon has taken up a precious space in 7th place. I see this as an injustice to say the least. Because of this UNREASONABLE decision by 1.8 million people, I am forced to brand myself as a Pompompurin lover. No hate to Pompompurin, but he's only a placeholder for the one true #1 in my heart...Kerokerokeroppi.</p>
+    <p>My name is Maggie Yang. I am not living the best life out there because there is not enough Keroppi merch in this world. You would normally think that such a NICE, CUTE FROG would make it into the top 10 of the fan voted popularity polls. But, the monstrosity that is Hangyodon has taken up a precious space in 7th place. I see this as an injustice to say the least. Every time I see a piece of Hangyodon merch where there could have been Keroppi, I die inside a little. Because of this UNREASONABLE decision by 1.8 million people, I am forced to brand myself as a Pompompurin lover. No hate to Pompompurin, but he's only a placeholder for the one true #1 in my heart...Kerokerokeroppi.</p>
     <ul>
         <h4>Reasons why Keroppi deserves Top 10</h4>
         <li>Frog</li>
